Création d'un 2ème graphique sur le temps d'arret moyen des voitures

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <div class ="lineChart"><canvas id="lineChart" width="600" height="350"></canvas></div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <canvas class ="lineChart" id="lineChart" width="600" height="350"></canvas>
     <script src="lineChart.js"></script>
+    <canvas class ="barChart" id="barChart" width="600" height="350"></canvas>
+    <script src="barChart.js"></script>
     <canvas class ="circulation" id="canvas" width="800" height="800"></canvas>
     <button class="bouton" id="boutonAlterner" type="button">Alterner</button>
 </body>
